--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Swiggy Clone App</title>
     <link rel="stylesheet" href="./index.css" />
+    <link href="./src/index.css" type="text/css" rel="stylesheet" />
   </head>
   <body>
     <div id="root">
