--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div id="root">
-      <h1>Please wait...</h1>
+      <h1 class="loading">Please wait...</h1>
     </div>
     <script type="module" src="./src/App.js"></script>
   </body>
